fix: change hero container height on mobile

--- a/main.css
+++ b/main.css
@@ -14,11 +14,10 @@ body {
 }
 
 .biz-day-content__container {
-  height: 100%;
+  height: 115%;
   background-image: url("./assets/bizday-la-bg-img-no-clouds-png.png");
   background-position: center center;
   background-repeat: no-repeat;
-  background-attachment: fixed;
   background-size: cover;
   margin: 0;
 }
